index페이지 초기작업

--- a/bcn.homepage/WebContent/index.html
+++ b/bcn.homepage/WebContent/index.html
@@ -1,1 +1,80 @@
-hello bcn!
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <title>Broadband Convergence Network Laboratory</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
+  <link rel="stylesheet" href="res/css/bcnstyle.css">
+</head>
+<body>
+  <!-- Navbar (sit on top) -->
+  <div class="w3-top">
+    <div class="w3-bar w3-white w3-wide w3-padding-8 w3-card-2">
+      <a href="#home" class="w3-margin-left w3-bar-item w3-button"><b class="text-color-blue">BCN</b> Laboratory</a>
+      <!-- Float links to the right. Hide them on small screens -->
+      <div class="w3-right w3-hide-small">
+        <a href="#home" class="w3-bar-item w3-button">Home</a>
+        <a href="#member" class="w3-bar-item w3-button">Member</a>
+        <a href="#projects" class="w3-bar-item w3-button">Projects</a>
+        <a href="#publications" class="w3-bar-item w3-button">Publications</a>
+        <a href="#broad" class="w3-bar-item w3-button">Broad</a>
+        <a href="#contact" class="w3-bar-item w3-button w3-margin-right">Contact</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Header -->
+<header class="w3-display-container w3-content w3-wide bcn-header" id="home">
+  <img class="w3-image" src="res/img/main_img_01.jpg" alt="Laboratory" width="1200" height="800">
+  <div class="w3-display-middle w3-margin-top w3-center">
+    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BCN</b></span> <span class="w3-hide-small w3-text-light-grey">Laboratory</span></h1>
+  </div>
+</header>
+
+<!-- Page content -->
+<div class="w3-content w3-padding bcn-content">
+
+  <!-- Project Section -->
+  <div class="w3-container w3-padding-32" id="news">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-12 text-color-blue">News</h3>
+  </div>
+
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">배홍민 졸업</div>
+        <img class="main-news-img" src="/w3images/house5.jpg" alt="news1">
+        <div>2017.02.22</div>
+        <div>홍익대학교 15학번 배홍민이 석사 졸업을 하였습니다. 그 감동의 현장에 박찬민은 없었고, 비는 있었습니다.</div>
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">마성훈 석사 입학</div>
+        <img class="main-news-img" src="/w3images/house2.jpg" alt="news2">
+        <div>2017.03.02</div>
+        <div>홍익대학교 마성훈이 17학번 석사과정으로 입학합니다. 과연 그는 잘 해낼까요?</div>
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">박찬민 퇴사</div>
+        <img class="main-news-img" src="/w3images/house3.jpg" alt="news3">
+        <div>2017.02.28</div>
+        <div>브런트 소속, 서버개발자 박찬민이 2017년 2월 28일까지 근무하고 3월부터는 그만둔다고 합니다.</div>
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">휴 하이</div>
+        <img class="main-news-img" src="/w3images/house4.jpg" alt="news4">
+        <div>2017.03.02</div>
+        <div>휴 잘 지내니? 박사과정 잘 하고 친구들이랑 즐겁게 잘 지내렴.</div>
+      </div>
+    </div>
+  </div>
+<!-- End page content -->
+</div>
+</body>
+</html>
