--- a/bcn.homepage/WebContent/index.html
+++ b/bcn.homepage/WebContent/index.html
@@ -37,7 +37,7 @@
 
   <!-- Project Section -->
   <div class="w3-container w3-padding-32" id="news">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-12 text-color-blue">News</h3>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-12 text-color-blue"><b>News</b></h3>
   </div>
 
   <div class="w3-row-padding">
