--- a/bcn.homepage/WebContent/index2.html
+++ b/bcn.homepage/WebContent/index2.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Navbar (sit on top) -->
   <div class="bcn-top">
-    <div class="bcn-wide bcn-padding-8 bcn-card-2">
+    <div class="bcn-bar bcn-white bcn-wide bcn-padding-8 bcn-card-2">
       <a href="#home" class="w3-margin-left w3-bar-item w3-button"><b class="text-color-blue">BCN</b> Laboratory</a>
       <!-- Float links to the right. Hide them on small screens -->
       <div class="w3-right w3-hide-small">
