--- a/bcn.homepage/WebContent/index2.html
+++ b/bcn.homepage/WebContent/index2.html
@@ -12,13 +12,13 @@
     <div class="bcn-bar bcn-white bcn-wide bcn-padding-8 bcn-card-2">
       <a href="#home" class="bcn-margin-left bcn-bar-item bcn-button"><b class="text-color-blue">BCN</b> Laboratory</a>
       <!-- Float links to the right. Hide them on small screens -->
-      <div class="w3-right w3-hide-small">
-        <a href="#home" class="w3-bar-item w3-button">Home</a>
-        <a href="#member" class="w3-bar-item w3-button">Member</a>
-        <a href="#projects" class="w3-bar-item w3-button">Projects</a>
-        <a href="#publications" class="w3-bar-item w3-button">Publications</a>
-        <a href="#broad" class="w3-bar-item w3-button">Broad</a>
-        <a href="#contact" class="w3-bar-item w3-button w3-margin-right">Contact</a>
+      <div class="bcn-right">
+        <a href="#home" class="bcn-bar-item bcn-button">Home</a>
+        <a href="#member" class="bcn-bar-item bcn-button">Member</a>
+        <a href="#projects" class="bcn-bar-item bcn-button">Projects</a>
+        <a href="#publications" class="bcn-bar-item bcn-button">Publications</a>
+        <a href="#broad" class="bcn-bar-item bcn-button">Broad</a>
+        <a href="#contact" class="bcn-bar-item bcn-button bcn-margin-right">Contact</a>
       </div>
     </div>
   </div>
