--- a/bcn.homepage/WebContent/index2.html
+++ b/bcn.homepage/WebContent/index2.html
@@ -24,9 +24,9 @@
   </div>
 
   <!-- Header -->
-<header class="w3-display-container w3-content w3-wide bcn-header" id="home">
-  <img class="w3-image" src="res/img/main_img_01.jpg" alt="Laboratory" width="1200" height="800">
-  <div class="w3-display-middle w3-margin-top w3-center">
+<header class="bcn-display-container bcn-content bcn-wide bcn-header" id="home">
+  <img class="bcn-image" src="res/img/main_img_01.jpg" alt="Laboratory" width="1200" height="800">
+  <div class="bcn-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BCN</b></span> <span class="w3-hide-small w3-text-light-grey">Laboratory</span></h1>
   </div>
 </header>
