--- a/bcn.homepage/WebContent/index2.html
+++ b/bcn.homepage/WebContent/index2.html
@@ -25,24 +25,24 @@
 
   <!-- Header -->
 <header class="bcn-display-container bcn-content bcn-wide bcn-header" id="home">
-  <img class="bcn-image" src="res/img/main_img_01.jpg" alt="Laboratory" width="1200" height="800">
-  <div class="bcn-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BCN</b></span> <span class="w3-hide-small w3-text-light-grey">Laboratory</span></h1>
+  <img class="bcn-image" src="res/img/main_img_01.jpg" alt="Laboratory" width="1500" height="400">
+  <div class="bcn-display-middle bcn-center">
+    <h1 class="bcn-text-white"><span class="bcn-padding bcn-back-black bcn-opacity-min"><b>BCN</b></span> <span class="w3-hide-small w3-text-light-grey">Laboratory</span></h1>
   </div>
 </header>
-
+<br>
 <!-- Page content -->
-<div class="w3-content w3-padding bcn-content">
+<div class="bcn-content bcn-padding bcn-content">
 
   <!-- Project Section -->
-  <div class="w3-container w3-padding-32" id="news">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-12 text-color-blue"><b>News</b></h3>
+  <div class="bcn-container bcn-padding-32" id="news">
+    <h1 class="bcn-border-bottom bcn-padding-12 text-color-blue"><b>News</b></h1>
   </div>
 
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">배홍민 졸업</div>
+        <div class="w3-display-topleft bcn-padding bcn-back-black">배홍민 졸업</div>
         <img class="main-news-img" src="/w3images/house5.jpg" alt="news1">
         <div>2017.02.22</div>
         <div>홍익대학교 15학번 배홍민이 석사 졸업을 하였습니다. 그 감동의 현장에 박찬민은 없었고, 비는 있었습니다.</div>
@@ -50,7 +50,7 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">마성훈 석사 입학</div>
+        <div class="w3-display-topleft bcn-padding bcn-back-black">마성훈 석사 입학</div>
         <img class="main-news-img" src="/w3images/house2.jpg" alt="news2">
         <div>2017.03.02</div>
         <div>홍익대학교 마성훈이 17학번 석사과정으로 입학합니다. 과연 그는 잘 해낼까요?</div>
@@ -58,7 +58,7 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">박찬민 퇴사</div>
+        <div class="w3-display-topleft bcn-padding bcn-back-black">박찬민 퇴사</div>
         <img class="main-news-img" src="/w3images/house3.jpg" alt="news3">
         <div>2017.02.28</div>
         <div>브런트 소속, 서버개발자 박찬민이 2017년 2월 28일까지 근무하고 3월부터는 그만둔다고 합니다.</div>
@@ -66,7 +66,7 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">휴 하이</div>
+        <div class="w3-display-topleft bcn-padding bcn-back-black">휴 하이</div>
         <img class="main-news-img" src="/w3images/house4.jpg" alt="news4">
         <div>2017.03.02</div>
         <div>휴 잘 지내니? 박사과정 잘 하고 친구들이랑 즐겁게 잘 지내렴.</div>
