--- a/bcn.homepage/WebContent/index2.html
+++ b/bcn.homepage/WebContent/index2.html
@@ -30,7 +30,7 @@
     <h1 class="bcn-text-white"><span class="bcn-padding bcn-back-black bcn-opacity-min"><b>BCN</b></span> <span class="w3-hide-small w3-text-light-grey">Laboratory</span></h1>
   </div>
 </header>
-<br>
+
 <!-- Page content -->
 <div class="bcn-content bcn-padding bcn-content">
 
@@ -39,34 +39,34 @@
     <h1 class="bcn-border-bottom bcn-padding-12 text-color-blue"><b>News</b></h1>
   </div>
 
-  <div class="w3-row-padding">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft bcn-padding bcn-back-black">배홍민 졸업</div>
+  <div class="bcn-row-padding">
+    <div class="bcn-col l3 m6 bcn-margin-bottom">
+      <div class="bcn-display-container">
+        <div class="bcn-display-topleft bcn-padding bcn-back-black">배홍민 졸업</div>
         <img class="main-news-img" src="/w3images/house5.jpg" alt="news1">
         <div>2017.02.22</div>
         <div>홍익대학교 15학번 배홍민이 석사 졸업을 하였습니다. 그 감동의 현장에 박찬민은 없었고, 비는 있었습니다.</div>
       </div>
     </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft bcn-padding bcn-back-black">마성훈 석사 입학</div>
+    <div class="bcn-col l3 m6 bcn-margin-bottom">
+      <div class="bcn-display-container">
+        <div class="bcn-display-topleft bcn-padding bcn-back-black">마성훈 석사 입학</div>
         <img class="main-news-img" src="/w3images/house2.jpg" alt="news2">
         <div>2017.03.02</div>
         <div>홍익대학교 마성훈이 17학번 석사과정으로 입학합니다. 과연 그는 잘 해낼까요?</div>
       </div>
     </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft bcn-padding bcn-back-black">박찬민 퇴사</div>
+    <div class="bcn-col l3 m6 bcn-margin-bottom">
+      <div class="bcn-display-container">
+        <div class="bcn-display-topleft bcn-padding bcn-back-black">박찬민 퇴사</div>
         <img class="main-news-img" src="/w3images/house3.jpg" alt="news3">
         <div>2017.02.28</div>
         <div>브런트 소속, 서버개발자 박찬민이 2017년 2월 28일까지 근무하고 3월부터는 그만둔다고 합니다.</div>
       </div>
     </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft bcn-padding bcn-back-black">휴 하이</div>
+    <div class="bcn-col l3 m6 bcn-margin-bottom">
+      <div class="bcn-display-container">
+        <div class="bcn-display-topleft bcn-padding bcn-back-black">휴 하이</div>
         <img class="main-news-img" src="/w3images/house4.jpg" alt="news4">
         <div>2017.03.02</div>
         <div>휴 잘 지내니? 박사과정 잘 하고 친구들이랑 즐겁게 잘 지내렴.</div>
