--- a/bcn.homepage/WebContent/index2.html
+++ b/bcn.homepage/WebContent/index2.html
@@ -27,7 +27,7 @@
 <header class="bcn-display-container bcn-content bcn-wide bcn-header" id="home">
   <img class="bcn-image" src="res/img/main_img_01.jpg" alt="Laboratory" width="1500" height="400">
   <div class="bcn-display-middle bcn-center">
-    <h1 class="bcn-text-white"><span class="bcn-padding bcn-back-black bcn-opacity-min"><b>BCN</b></span> <span class="w3-hide-small w3-text-light-grey">Laboratory</span></h1>
+    <h1 class="bcn-text-white"><span class="bcn-padding bcn-back-black bcn-opacity-min"><b>BCN</b></span> <span class="bcn-text-light-gray">Laboratory</span></h1>
   </div>
 </header>
 
@@ -43,7 +43,7 @@
     <div class="bcn-col l3 m6 bcn-margin-bottom">
       <div class="bcn-display-container">
         <div class="bcn-display-topleft bcn-padding bcn-back-black">배홍민 졸업</div>
-        <img class="main-news-img" src="/w3images/house5.jpg" alt="news1">
+        <div class="bcn-news-container"><img class="main-news-img" src="res/img/hongmin_graduate.JPG" alt="news1"></div>
         <div>2017.02.22</div>
         <div>홍익대학교 15학번 배홍민이 석사 졸업을 하였습니다. 그 감동의 현장에 박찬민은 없었고, 비는 있었습니다.</div>
       </div>
@@ -51,7 +51,7 @@
     <div class="bcn-col l3 m6 bcn-margin-bottom">
       <div class="bcn-display-container">
         <div class="bcn-display-topleft bcn-padding bcn-back-black">마성훈 석사 입학</div>
-        <img class="main-news-img" src="/w3images/house2.jpg" alt="news2">
+        <div class="bcn-news-container"><img class="main-news-img" src="res/img/sunghoon.jpg" alt="news2"></div>
         <div>2017.03.02</div>
         <div>홍익대학교 마성훈이 17학번 석사과정으로 입학합니다. 과연 그는 잘 해낼까요?</div>
       </div>
@@ -59,7 +59,7 @@
     <div class="bcn-col l3 m6 bcn-margin-bottom">
       <div class="bcn-display-container">
         <div class="bcn-display-topleft bcn-padding bcn-back-black">박찬민 퇴사</div>
-        <img class="main-news-img" src="/w3images/house3.jpg" alt="news3">
+        <div class="bcn-news-container"><img class="main-news-img" src="/w3images/house3.jpg" alt="news3"></div>
         <div>2017.02.28</div>
         <div>브런트 소속, 서버개발자 박찬민이 2017년 2월 28일까지 근무하고 3월부터는 그만둔다고 합니다.</div>
       </div>
@@ -67,7 +67,7 @@
     <div class="bcn-col l3 m6 bcn-margin-bottom">
       <div class="bcn-display-container">
         <div class="bcn-display-topleft bcn-padding bcn-back-black">휴 하이</div>
-        <img class="main-news-img" src="/w3images/house4.jpg" alt="news4">
+        <div class="bcn-news-container"><img class="main-news-img" src="/w3images/house4.jpg" alt="news4"></div>
         <div>2017.03.02</div>
         <div>휴 잘 지내니? 박사과정 잘 하고 친구들이랑 즐겁게 잘 지내렴.</div>
       </div>
