--- a/bcn.homepage/WebContent/index2.html
+++ b/bcn.homepage/WebContent/index2.html
@@ -59,7 +59,7 @@
     <div class="bcn-col l3 m6 bcn-margin-bottom">
       <div class="bcn-display-container">
         <div class="bcn-display-topleft bcn-padding bcn-back-black">박찬민 퇴사</div>
-        <div class="bcn-news-container"><img class="main-news-img" src="/w3images/house3.jpg" alt="news3"></div>
+        <div class="bcn-news-container"><img class="main-news-img" src="res/img/pcm.jpg" alt="news3"></div>
         <div>2017.02.28</div>
         <div>브런트 소속, 서버개발자 박찬민이 2017년 2월 28일까지 근무하고 3월부터는 그만둔다고 합니다.</div>
       </div>
@@ -67,7 +67,7 @@
     <div class="bcn-col l3 m6 bcn-margin-bottom">
       <div class="bcn-display-container">
         <div class="bcn-display-topleft bcn-padding bcn-back-black">휴 하이</div>
-        <div class="bcn-news-container"><img class="main-news-img" src="/w3images/house4.jpg" alt="news4"></div>
+        <div class="bcn-news-container"><img class="main-news-img" src="res/img/hieu.jpg" alt="news4"></div>
         <div>2017.03.02</div>
         <div>휴 잘 지내니? 박사과정 잘 하고 친구들이랑 즐겁게 잘 지내렴.</div>
       </div>
