메뉴에 마우스 오버했을 때 서브메뉴 나타내기. 위치 조정 필요. #3

--- a/bcn.homepage/WebContent/index.html
+++ b/bcn.homepage/WebContent/index.html
@@ -14,7 +14,13 @@
       <!-- Float links to the right. Hide them on small screens -->
       <div class="bcn-right">
         <a href="#home" class="bcn-bar-item bcn-button">Home</a>
-        <a href="#member" class="bcn-bar-item bcn-button">Member</a>
+        <span class="bcn-has-submenu">
+          <a href="#member" class="bcn-bar-item bcn-button">Member</a>
+          <div class="bcn-submenu-content">
+            <li>menu1</li>
+            <li>menu2</li>
+          </div>
+        </span>
         <a href="#projects" class="bcn-bar-item bcn-button">Projects</a>
         <a href="#publications" class="bcn-bar-item bcn-button">Publications</a>
         <a href="#broad" class="bcn-bar-item bcn-button">Broad</a>
