서브 메뉴 위치 조정 중.. #3

--- a/bcn.homepage/WebContent/index.html
+++ b/bcn.homepage/WebContent/index.html
@@ -13,18 +13,28 @@
       <a href="#home" class="bcn-margin-left bcn-bar-item bcn-button"><b class="text-color-blue">BCN</b> Laboratory</a>
       <!-- Float links to the right. Hide them on small screens -->
       <div class="bcn-right">
-        <a href="#home" class="bcn-bar-item bcn-button">Home</a>
-        <span class="bcn-has-submenu">
+        <div class="bcn-has-submenu">
+          <a href="#home" class="bcn-bar-item bcn-button">Home</a>
+        </div>
+        <div class="bcn-has-submenu">
           <a href="#member" class="bcn-bar-item bcn-button">Member</a>
           <div class="bcn-submenu-content">
             <li>menu1</li>
             <li>menu2</li>
           </div>
-        </span>
-        <a href="#projects" class="bcn-bar-item bcn-button">Projects</a>
-        <a href="#publications" class="bcn-bar-item bcn-button">Publications</a>
-        <a href="#broad" class="bcn-bar-item bcn-button">Broad</a>
-        <a href="#contact" class="bcn-bar-item bcn-button bcn-margin-right">Contact</a>
+        </div>
+        <div class="bcn-has-submenu">
+          <a href="#projects" class="bcn-bar-item bcn-button">Projects</a>
+        </div>
+        <div class="bcn-has-submenu">
+          <a href="#publications" class="bcn-bar-item bcn-button">Publications</a>
+        </div>
+        <div class="bcn-has-submenu">
+          <a href="#broad" class="bcn-bar-item bcn-button">Broad</a>
+        </div>
+        <div class="bcn-has-submenu">
+          <a href="#contact" class="bcn-bar-item bcn-button bcn-margin-right">Contact</a>
+        </div>
       </div>
     </div>
   </div>
