서브메뉴 리스트에 불릿 없앰. #3

--- a/bcn.homepage/WebContent/index.html
+++ b/bcn.homepage/WebContent/index.html
@@ -19,8 +19,9 @@
         <div class="bcn-has-submenu">
           <a href="#member" class="bcn-bar-item bcn-button">Member</a>
           <div class="bcn-submenu-content">
-            <li>menu1</li>
-            <li>menu2</li>
+            <li class="bcn-submenu-item">Professor</li>
+            <li class="bcn-submenu-item">Students</li>
+            <li class="bcn-submenu-item">Alumini</li>
           </div>
         </div>
         <div class="bcn-has-submenu">
