메뉴바의 하위메뉴 구성 완료. #3

--- a/bcn.homepage/WebContent/index.html
+++ b/bcn.homepage/WebContent/index.html
@@ -29,9 +29,24 @@
         </div>
         <div class="bcn-has-submenu">
           <a href="#publications" class="bcn-bar-item bcn-button">Publications</a>
+          <div class="bcn-submenu-content">
+            <li class="bcn-submenu-item">Journal</li>
+              <li class="bcn-submenu-item2">SCI/SCIE</li>
+              <li class="bcn-submenu-item2">Non-SCI/SCIE</li>
+              <li class="bcn-submenu-item2">Domestic</li>
+            <li class="bcn-submenu-item">Conference</li>
+              <li class="bcn-submenu-item2">International</li>
+              <li class="bcn-submenu-item2">Domestic</li>
+            <li class="bcn-submenu-item">Patents</li>
+            <li class="bcn-submenu-item">Software</li>
+          </div>
         </div>
         <div class="bcn-has-submenu">
           <a href="#broad" class="bcn-bar-item bcn-button">Broad</a>
+          <div class="bcn-submenu-content">
+            <li class="bcn-submenu-item">News</li>
+            <li class="bcn-submenu-item">Notice</li>
+          </div>
         </div>
         <div class="bcn-has-submenu">
           <a href="#contact" class="bcn-bar-item bcn-button bcn-margin-right">Contact</a>
